--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,9 @@
     "typescript": "^5.4.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.28"
   }
 }
