--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -14,8 +14,8 @@ spec:
     spec:
       containers:
       - name: backend
-        image: campuscycle-backend
-        imagePullPolicy: Never
+        image: zebangeth/campuscycle:backend-latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 3000
         env:
