--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: campuscycle-frontend
-        imagePullPolicy: Never
+        image: zebangeth/campuscycle:frontend-latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
