--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-# .env
 MONGODB_URI=mongodb://localhost:27017/CampusCycle
 PORT=3000
-JWT_SECRET=<your-jwt-secret> # TBD
+SESSION_SECRET=<my-session-secret> # TBD
+NODE_ENV=development
