--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 # .env
-MONGODB_URI=mongodb://localhost:27017/CampusCycle
+# MONGODB_URI=mongodb://localhost:27017/CampusCycle
+MONGODB_URI=mongodb+srv://zoe:12345@cluster0.pfvmjxp.mongodb.net/CampusCycle
 PORT=3000
 JWT_SECRET=<your-jwt-secret> # TBD
