--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 # .env
-MONGODB_URI=mongodb://localhost:27017/CampusCycle
+# MONGODB_URI=mongodb://localhost:27017/CampusCycle
+MONGODB_URI=mongodb+srv://zoe:12345@cluster0.pfvmjxp.mongodb.net/CampusCycle
 PORT=3000
 SESSION_SECRET=<my-session-secret> # TBD
 NODE_ENV=development
