--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,9 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
+    "openid-client": "^5.6.5",
+    "passport": "^0.7.0",
+    "passport-openidconnect": "^0.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   },
@@ -27,6 +30,8 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.11.28"
+    "@types/node": "^20.11.28",
+    "@types/openid-client": "^3.7.0",
+    "@types/passport": "^1.0.16"
   }
 }
