--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,8 @@
 server {
     listen 80;
+    location /api/ {
+      proxy_pass http://backend:3000;
+    }
     location / {
         root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
