--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "@playwright/test": "^1.43.1",
     "@types/node": "^20.12.7"
+  },
+  "dependencies": {
+    "passport-custom": "^1.1.1"
   }
 }
