--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: zebangeth/campuscycle:backend-latest
     ports:
       - "3000:3000"
-    environment:
+    # environment:
       # - MONGODB_URI=mongodb://mongo:27017/CampusCycle
       # - GITLAB_CLIENT_ID=fcf776638ff60425d7c3348eb1a64427015a239eab5022ba678291d6b1aa2635
       # - GITLAB_CLIENT_SECRET=gloas-0adbffa6657fac89b20fd84745fb55de1b3af8e6a7fd7349c3c988cea128352c
