--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -18,6 +18,6 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 3000
-        env:
-        - name: MONGODB_URI
-          value: mongodb://mongo-service:27017/CampusCycle
+        # env:
+        # - name: MONGODB_URI
+          # value: mongodb://mongo-service:27017/CampusCycle
